# devialet-phantom-ctl

./: ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/devialetctl/: api.py  cli.py  discovery.py
src/devialetctl/application/: __init__.py  daemon.py  ports.py  router.py  service.py
src/devialetctl/domain/: __init__.py  events.py  policy.py
src/devialetctl/infrastructure/: __init__.py  cec_adapter.py  config.py  devialet_gateway.py  keyboard_adapter.py  mdns_gateway.py  upnp_gateway.py
src/devialetctl/interfaces/: cli.py  topology.py
tests/: test_base_path_normalization.py  test_cec_adapter_runtime.py  test_cec_parser.py  test_cli_helpers.py  test_cli_regression.py  test_compat_wrappers.py  test_config_loading.py  test_daemon_runner.py  test_devialet_gateway_http.py  test_keyboard_adapter.py  test_keyboard_adapter_runtime.py  test_mdns_filter.py  test_mdns_gateway_cleanup.py  test_mdns_gateway_listener.py  test_policy.py  test_router.py  test_topology.py  test_upnp_gateway.py  test_volume_service_steps.py
