[project]
name = "devialet-phantom-ctl"
version = "0.1.0"
description = "Discover Devialet Phantom systems and send IP Control commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "zeroconf>=0.130",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
devialetctl = "devialetctl.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devialetctl"]
